<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:gravity="center_vertical"
    android:background="#000000">

    <ImageButton
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/img_templetag"
        android:layout_above="@+id/signUpLayout"
        android:layout_centerInParent="true"
        android:layout_marginBottom="90dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center_horizontal"
        android:id="@+id/signUpLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="Create a new account"
            android:textSize="27sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="monospace"
            android:hint="Username"
            app:met_baseColor="@color/white"
            app:met_floatingLabel="highlight"
            app:met_textColorHint="@color/white"
            app:met_underlineColor="@color/TempleTagTheme"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="monospace"
            android:hint="Email"
            android:inputType="textEmailAddress"
            app:met_baseColor="@color/white"
            app:met_floatingLabel="highlight"
            app:met_textColorHint="@color/white"
            app:met_underlineColor="@color/TempleTagTheme"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="monospace"
            android:hint="Password"
            android:inputType="textPassword"
            app:met_baseColor="@color/white"
            app:met_floatingLabel="highlight"
            app:met_textColorHint="@color/white"
            app:met_underlineColor="@color/TempleTagTheme"/>

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:theme="@style/AppTheme.Button"
            android:fontFamily="monospace"
            android:padding="10dp"
            android:text="register"
            android:textColor="#fff" />

    </LinearLayout>

</RelativeLayout>