...
    android:background="#000000">

    <ImageButton
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/img_templetag"
        android:layout_above="@+id/loginLayout"
        android:layout_centerInParent="true"
        android:layout_marginBottom="90dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
            android:text="@string/no_account"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"/>

        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:theme="@style/AppTheme.Button"
            android:fontFamily="monospace"
            android:padding="10dp"
            android:text="@string/sign_up_btn"
...
