...
    <string name="password">password_change_pref</string>
    <string name="no_account">No Account?</string>
    <string name="login">Login</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="welcome_to_templetag">Welcome to TempleTag</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="title_activity_create_tag">Create Tag</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
...
